# room-overview

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  config.example.toml
.github/workflows/: cargo-test.yml
.sqlx/: query-0ab3e1b935012798e79a56507bb414484204e98eee82e6d57626792d8d440efb.json  query-0dd01da76c4615f78d3ba86f4fcf15fca66b608464df85d451578fc47475ae5d.json  query-231c4fe9a723e5ba2d92f1615c9004253958b7e2343b5b7a7ca564a86cf7aeb3.json  query-3b81e2837ac0040f664ef2496ec9961d719f941ee783901ce10e7b13638e4410.json  query-45bada6b665089866e575e30ca3b9e8079665e2a656568828025acd0eed9133f.json  query-56a08a4c766c0341b4778e787daac06ad88f7c56c57fbb2b3132a364b90acf14.json  query-7383eb8c486da126bbe3a9ab00f29e1b197a4d91431162c0691add45b23eeba1.json  query-9b52e7ea108a081db3bf6251a836ad70e002c2ac9e4fb76bdebe9274e5136344.json  query-ac0246a8e6dbc80a1c1ea539d8057f8069a7283c849834c7bebab5391bd98eeb.json  query-c083aa4948bf15d99e3e43a094590b85b293c42ad8cc33ca72d970e772393301.json  query-cb46f41a389fcf25d7b5e2b68da2e83f37bb87b54952c0dfc7c582d77b111ae1.json
migrations/: 001_bookings.up.sql
src/: config.rs  db.rs  main.rs  pull_from_ct.rs
src/fixtures/: 001_good_data.sql  002_empty.sql
src/web/: mod.rs
templates/: 404.html  500.html  landing.html
templates/static/: htmx@2.0.2_response_targets.js  input.css  style.css
