[package]
name = "room-overview"
version = "0.1.3"
edition = "2021"
authors = ["Jonathan Schleucher"]
keywords = ["churchtools"]
license = "MIT-0"
readme = "README.md"

[dependencies]
askama_axum = "0.4.0"
askama = { version = "0.12.1", features = ["with-axum"] }
axum = "0.7.5"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
chrono = { version = "0.4.38", features = ["clock", "now", "serde"] }
itertools = "0.13.0"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls"] }
# only so that we can install a default crypto provider.
# used only transitively by some other dependencies
rustls = { version = "0.23.13", default-features = false, features = ["ring"]}
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["chrono", "sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.12"
toml = { version = "0.8.19", features = ["preserve_order"] }
toml_edit = "0.22.22"
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["time", "fmt", "env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
chrono-tz = "0.10.1"
ics = "0.5.8"
